Learning Proper Architecture

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "clerk-backend-api>=4.2.0",
     "fastapi[standard]>=0.124.2",
     "pydantic-settings>=2.12.0",
+    "pydantic[email]>=2.12.5",
     "sqlalchemy>=2.0.45",
 ]
