--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.2",
     "clerk-backend-api>=4.2.0",
-    "fastapi[standard]>=0.124.2",
+    "fastapi[standard]>=0.124.4",
     "pydantic-settings>=2.12.0",
-    "pydantic[email]>=2.12.5",
+    "pytz>=2025.2",
     "sqlalchemy>=2.0.45",
 ]
