--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.17.2",
     "clerk-backend-api>=4.2.0",
     "fastapi[standard]>=0.124.4",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
     "python-slugify>=8.0.4",
     "pytz>=2025.2",
