--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.2",
+    "alembic-postgresql-enum>=1.8.0",
     "clerk-backend-api>=4.2.0",
     "fastapi[standard]>=0.124.4",
     "psycopg2-binary>=2.9.11",
