--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "cloudinary>=1.44.1",
     "fastapi[standard]>=0.124.4",
     "google-genai>=1.56.0",
+    "openpyxl>=3.1.5",
     "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
     "python-multipart>=0.0.20",
